# mads-cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  generate_token.py  llms.txt  mads  mads.sh  pyproject.toml
.agents/skills/mads-cli/: SKILL.md
.claude/skills/mads-cli/: SKILL.md
.github/workflows/: ci.yml
kb/: INDEX.md  commerce-catalog.md  conversions-api.md  graph-api.md  manifest.json  marketing-api.md  whatsapp-business-platform.md
mads_lib/: __init__.py  abtest.py  ads.py  adsets.py  audiences.py  auth.py  business.py  campaigns.py  capi.py  catalog.py  cli.py  comments.py  commerce.py  config.py  creatives.py  db.py  dbread.py  http.py  insights.py  kb.py  output.py  pages.py  posts.py  timeutil.py  webhooks.py  whatsapp.py
mads_lib/analyze/: __init__.py  adcopy.py  audience_overlap.py  audit.py  budget_pacing.py  creative_fatigue.py  placement_breakdown.py
scripts/: install.sh
tests/: conftest.py  test_enforce_allowed_caller.py  test_mads.py  test_posts_comments.py  test_whatsapp.py
